# usma_swarm

./: GPS_Simulator.md  README.md  README_VehicleConfig.md  README_VehicleConfiguration  copyOdroidImage.md  createNewOdroidFromImageCopy.md  howToSITL.md  howToScrimmage.md  odroidReimageAndConfigure.md  setup.md  updateMissionParameters.md  updatePayload.md  updatePixhawk.md  update_launch_parameters_unique.md
Capstone/: greedy_goto_v3.py  htmltest2.html  sample data.csv  sample.geojson  sample_data.csv  sample_gj.geojson
flightTest/: radeye.py
heatmap/: geogen.py  greedy_goto_heatmap.py  heatmapWPserver.py  htmltest.html  sample.geojson  sample_data1.csv  sample_gj.geojson  sample_gj2.js
heatmap/leaflet/: elevation.py  example.html  geogen2.py  index-heat.html  index.html  index2.html  indexgoto.html  realworld.10000.js  sample_data2.csv  sample_gj.geojson  sample_gj2.js  testfile.js
src/basic_temp/: CMakeLists.txt  package.xml
src/drone_stream/: .package.xml.swp  CMakeLists.txt  package.xml
src/drone_stream/basicTemp/: basicTemp.ino
src/drone_stream/launch/: master.launch
swarms_AGV/: swarms_AGV_V0.01.ino  swarms_AGV_V0.02.ino
usma_files/: .inl_push.sh.swp  .~lock.Waypoint_Key.xlsx#  Team_RAIDERS_StartGuide.md  Waypoint_Key.xlsx  begin_sim_usma.py  bugs.txt  calculator.py  check.sh  getBehaviors.sh  inl_push.sh  quad_setup.sh  run_sim.sh  spud1_enums_local.py  swarm_behavior_README.md  swarm_sync.sh  update_launch_parameters_unique.md  waypoint_retriever.py  waypoint_server.py  wp.template  zeph_brady_instructions.txt
usma_files/PX4_Params/: 110.parm  (+4 more)
(+2510 files in other folders)
